--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -3,13 +3,22 @@ $icon-font-path: "../fonts";
 $font-size-base: 18px;
 
 // Basics of a navbar
-$navbar-default-bg: rgba(255, 255, 255, 0.8);
+$navbar-height: 55px;
+$navbar-default-bg: rgba(255, 255, 255, 0.9);
 $navbar-default-link-active-bg: rgba(0, 0, 0, 0.1);
 
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+// Navbar font tweaks
+.navbar-brand {
+  font-weight: 100;
+}
+
+.navbar-right a {
+  font-weight: 300;
+}
 
 .browsehappy {
     margin: 0.2em 0;
