--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,30 @@ $navbar-default-link-active-bg: rgba(0, 0, 0, 0.1);
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
 
+// General styling
+body {
+  font-weight: 300;
+}
+
+h1, h2, h3 {
+  font-weight: 300;
+}
+
+h4{
+  font-weight: 500;
+}
+
+strong {
+  font-weight: 500;
+}
+
 // Homepage h1 styling
+
+h1 small {
+  color: #b9b9b9;
+  font-weight: 100;
+}
+
 .home h1 {
   font-size: 2.8vw;
   position: relative;
