--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@ $navbar-default-link-active-bg: rgba(0, 0, 0, 0.1);
 // General styling
 body {
   font-weight: 300;
+  min-width: 600px;
 }
 
 h1, h2, h3 {
