--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,22 @@ $navbar-default-link-active-bg: rgba(0, 0, 0, 0.1);
 
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
+@import "../bower_components/fullpage.js/jquery.fullPage.scss";
 // endbower
+
+/**
+ * Note: I have omitted any vendor-prefixes for clarity.
+ * Adding them is left as an exercise for the reader.
+ */
+.headroom {
+  transition: transform 200ms linear;
+}
+.headroom--pinned {
+  transform: translateY(0%);
+}
+.headroom--unpinned {
+  transform: translateY(-100%);
+}
 
 // General styling
 body {
